--- a/2.html
+++ b/2.html
@@ -3,6 +3,25 @@
 <head>
 <title>Maroon 5 Song List</title>
 <meta charset="utf-8">
+<style media="screen">
+  body{
+    margin:0;
+  }
+  h1 {
+    font-size:50px;
+    text-align: center;
+    border-bottom:1px solid gray;
+    margin:0;
+    padding:20px;
+  }
+  ol{
+    font-size:20px;
+    border-right:1px solid gray;
+    width:200px;
+    margin:0;
+    padding-top:30px;
+  }
+</style>
 </head>
 
 <body>
@@ -13,7 +32,7 @@
     <li><a href="3.html">Member</a></li>
   </ol>
     <h2>Song List</h2>
-    <ol>
+    <ul>
         <li><a href="https://www.youtube.com/watch?v=09R8_2nJtjg" target="_blank">Sugar</a></li>
         <li><a href="">Payphon</a>e</li>
         <li><a href="https://www.youtube.com/watch?v=iEPTlhBmwRg" target="_blank">Moves like jagger</a></li>
