--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
 <head>
-<title>introduce who is maroon5</title>
-<meta charset="utf-8">
+  <title>introduce who is maroon5</title>
+  <meta charset="utf-8">
+  <style>
+    a {
+      color:blue;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:50px; text-align: center;
+    }
+  </style>
 </head>
 
 <body>
